backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-app-backend
  labels:
    app: recipe-app-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: recipe-app-backend
  template:
    metadata:
      labels:
        app: recipe-app-backend
    spec:
      containers:
        - name: recipe-app-backend
          image: us-east1-docker.pkg.dev/recipe-app-452222/recipe-app/recipe-app-backend
          ports:
            - containerPort: 8080
