backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipe-app-backend-service
spec:
  selector:
    app: recipe-app-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
