frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipe-app-frontend-service
spec:
  selector:
    app: recipe-app-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
