Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipe-app-ingress
  annotations:
    kubernetes.io/spec.ingressClassName: "gce"  # Use "gce" for GKE Ingress
    networking.gke.io/managed-certificates: "recipe-cert"  # Optional: For HTTPS
    kubernetes.io/ingress.global-static-ip-name: "recipe-app-ip"
spec:
  rules:
    - host: recipeshare.vishalgandla.online  # Your domain
      http:
        paths:
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: recipe-app-backend-service  # Your backend service name
                port:
                  number: 80  # Adjust to match your backend service port
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recipe-app-frontend-service  # Your service name
                port:
                  number: 80  # Adjust to match your service port
